# dyntable

./: .editorconfig  .gitignore  COMPARISON.md  Cargo.toml  README.md  flake.nix  rustfmt.toml
.github/workflows/: test.yml
dyntable-macro/: Cargo.toml
dyntable-macro/src/: codegen.rs  lib.rs
dyntable-macro/src/codegen/: dyntable.rs  mod.rs  vtable.rs  vtable_impl.rs
dyntable-macro/src/codegen/vtable/: def.rs  imp.rs  mod.rs
dyntable-macro/src/parse/: attribute.rs  dyntrait.rs  mod.rs
src/: alloc.rs  boxed.rs  lib.rs  private.rs
tests/: basic.rs  compile.rs  ffi.c  ffi.rs  generic.rs  inheritance.rs  reftable.rs  send_sync.rs
tests/compile/fail/: abi.rs  abi.stderr  arguments.rs  arguments.stderr  associated_fn.rs  associated_fn.stderr  borrow.rs  borrow.stderr  dyn_where_bound.rs  dyn_where_bound.stderr  fn_defs.rs  fn_defs.stderr  lifetime.rs  lifetime.stderr  reference_bounds.rs  reference_bounds.stderr  scope.rs  scope.stderr  send_sync.rs  send_sync.stderr  take_self_from_ref.rs  take_self_from_ref.stderr  trait_bounds.rs  trait_bounds.stderr  trait_bounds_merge.rs  trait_bounds_merge.stderr  upcast.rs  upcast.stderr  vtable_embed.rs  vtable_embed.stderr
tests/compile/pass/: abi.rs  arguments.rs  associated_ty.rs  borrow.rs  default_generics.rs  dyn_where_bound.rs  foreign_impl.rs  lifetime.rs  name_conflict.rs  scope.rs  trait_bounds.rs  upcast.rs  vtable_embed.rs
