[package]
name = "dyntable"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
alloc = []
allocator_api = ["alloc"]
std = ["alloc"]

[dependencies.dyntable-macro]
path = "dyntable-macro"

[dev-dependencies] # test dependencies
trybuild = "^1"
libloading = "^0.7"

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

